DB변경 계정명, 셀렉박스 추가 / 챗봇 디자인 개선

--- a/src/main/webapp/resources/chatBot/css/chatBotStyle.css
+++ b/src/main/webapp/resources/chatBot/css/chatBotStyle.css
@@ -10,18 +10,13 @@ body{
 	width: 600px;
 	height: 650px;
 }
-
-.chatBotHeader{
-	background-color: silver;
-	width: 100%;
-	height: 50px;
-	margin-top: 0;
-}
+/* 중앙 최상단 챗봇 텍스트 */
+.chatBotHeader{ background-color: #fff; width: 100%; height: 50px; margin-top: 0; text-align: center; }
 
 .chatBotArticle{
 	width: 100%;
-	height : 480px;
-	background-color: #f2f2f2;
+	height : 542px;
+	background-color: #fff;
 	overflow-y:auto; 
 }
 
@@ -71,7 +66,7 @@ padding-left : 45px;
 .chatBotResult{
 	border-radius: 6px;
     background-color: #fff;
-    box-shadow: 4px 5px 5px 3px rgba(0,0,0,0.1);
+    box-shadow: 2px 3px 12px 3px rgba(0,0,0,0.1);
     line-height: 22px;
     letter-spacing: -0.5px;
     color: #555;
@@ -100,7 +95,7 @@ padding-left : 45px;
 .userResult{
 	border-radius: 6px;
     background-color: #fff;
-    box-shadow: 4px 5px 5px 3px rgba(0,0,0,0.1);
+    box-shadow: -3px 5px 6px 1px rgba(0,0,0,0.1);
     line-height: 22px;
     letter-spacing: -0.5px;
     color: #555;
@@ -113,7 +108,7 @@ padding-left : 45px;
 .chatBotFooter{
     border-top: 1px solid silver;
     width: 100%;
-    height: 120px;
+    height: 58px;
     bottom: 5px;
     text-align: center;
 }
@@ -125,13 +120,19 @@ padding-left : 45px;
 .questionBtn{
     position: relative;
     float: right;
+    background : url(/resources/img/submitBtn.png;); no-repeat;
+  	width: 38px;
+    height: 38px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 100%;
 }
 
 .userInput{
-	float : right;
+    float: right;
     position: relative;
-    width: 434px;
-    height: 99px;
+    size: auto;
     padding: 0;
     border: none;
     font-size: 14px;
@@ -139,8 +140,10 @@ padding-left : 45px;
     line-height: 20px;
     vertical-align: top;
     box-sizing: border-box;
-    overflow-y: auto;
+    overflow-y: hidden;
     resize: none;
     border-radius: 3px;
     margin-right: 5px;
+    min-width: 460px;
+    min-height: 40px;
 }
