--- a/src/main/webapp/resources/chatBot/css/chatBotStyle.css
+++ b/src/main/webapp/resources/chatBot/css/chatBotStyle.css
@@ -1,149 +1,160 @@
 @charset "UTF-8";
 
-body{
+body {
 	margin: 0;
 	padding: 0;
 }
 
-.chatBotRoom{
-	background-color : gray;
+.chatBotRoom {
+	background-color: gray;
 	width: 600px;
 	height: 650px;
 }
 /* 중앙 최상단 챗봇 텍스트 */
-.chatBotHeader{ background-color: #fff; width: 100%; height: 50px; margin-top: 0; text-align: center; }
-
-.chatBotArticle{
-	width: 100%;
-	height : 542px;
+.chatBotHeader {
 	background-color: #fff;
-	overflow-y:auto; 
+	width: 100%;
+	height: 50px;
+    border-bottom: 1px solid #EAEAEA;
+	text-align: center;
 }
 
-.boxChatRoom{
+.chatBotArticle {
+	width: 100%;
+	height: 541px;
+	background-color: #fff;
+	overflow-y: auto;
+}
+
+.boxChatRoom {
 	
 }
 
-.chatBotUl{
-	display : inline-block;
-	width : 100%;
+.chatBotUl {
+	display: inline-block;
+	width: 100%;
 	list-style: none;
 	padding-left: 0;
 }
 
-.liList{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    line-height: inherit;
-    word-break: break-word;
-    margin-top: 22px;
-    display: grid;
+.liList {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	line-height: inherit;
+	word-break: break-word;
+	margin-top: 22px;
+	display: grid;
 }
 
-.chatBotImg{
+.chatBotImg {
 	width: 45px;
 	height: 45px;
 	float: left;
 }
+
 p.pchatBot {
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 3px;
-}
-.chatBotDiv{
-padding-left : 45px;
+	margin-top: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-bottom: 3px;
 }
 
-.chatBotSpan{
-    text-align: left;
-    display: block;
+.chatBotDiv {
+	padding-left: 45px;
 }
 
+.chatBotSpan {
+	text-align: left;
+	display: block;
+}
 
-
-.chatBotResult{
+.chatBotResult {
 	border-radius: 6px;
-    background-color: #fff;
-    box-shadow: 2px 3px 12px 3px rgba(0,0,0,0.1);
-    line-height: 22px;
-    letter-spacing: -0.5px;
-    color: #555;
-    left: 0;
-    float: left;
-    
+	background-color: #fff;
+	box-shadow: 2px 3px 12px 3px rgba(0, 0, 0, 0.1);
+	line-height: 22px;
+	letter-spacing: -0.5px;
+	color: #555;
+	left: 0;
+	float: left;
 }
 
-.profImg{
-    width: 35px;
-    height: 35px;
-    margin-right: 3px;
-    margin-bottom: 5px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    border-radius: 100%;
+.profImg {
+	width: 35px;
+	height: 35px;
+	margin-right: 3px;
+	margin-bottom: 5px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	border-radius: 100%;
 	float: right;
 }
 
-.userSpan{
-    text-align: right;
-    display: block;
+.userSpan {
+	text-align: right;
+	display: block;
 }
 
-.userResult{
+.userResult {
 	border-radius: 6px;
-    background-color: #fff;
-    box-shadow: -3px 5px 6px 1px rgba(0,0,0,0.1);
-    line-height: 22px;
-    letter-spacing: -0.5px;
-    color: #555;
-    left: 0;
-    float: right;
-    margin-top: 2%;
-    margin-left: 20%;
-    margin-right: 2%;
+	background-color: #fff;
+	box-shadow: -3px 5px 6px 1px rgba(0, 0, 0, 0.1);
+	line-height: 22px;
+	letter-spacing: -0.5px;
+	color: #555;
+	left: 0;
+	float: right;
+	margin-top: 2%;
+	margin-left: 20%;
+	margin-right: 2%;
 }
-.chatBotFooter{
-    border-top: 1px solid silver;
-    width: 100%;
-    height: 58px;
-    bottom: 5px;
-    text-align: center;
+
+.chatBotFooter {
+	border-top: 1px solid silver;
+	width: 100%;
+	height: 58px;
+	bottom: 5px;
+	text-align: center;
 }
-.chatBotFooterBox{
+
+.chatBotFooterBox {
 	margin-top: 10px;
-	margin-right: 10px;	
+	margin-right: 10px;
 }
 
-.questionBtn{
-    position: relative;
-    float: right;
-    background : url(/resources/img/submitBtn.png;); no-repeat;
-  	width: 38px;
-    height: 38px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    border-radius: 100%;
+.questionBtn {
+	position: relative;
+	float: right;
+	background: url(/resources/img/submitBtn.png;); no-repeat;
+	width: 38px;
+	height: 38px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	border-radius: 100%;
 }
 
-.userInput{
-    float: right;
-    position: relative;
-    size: auto;
-    padding: 0;
-    border: none;
-    font-size: 14px;
-    color: #555;
-    line-height: 20px;
-    vertical-align: top;
-    box-sizing: border-box;
-    overflow-y: hidden;
-    resize: none;
-    border-radius: 3px;
-    margin-right: 5px;
-    min-width: 460px;
-    min-height: 40px;
+.userInput {
+	float: right;
+	position: relative;
+	size: auto;
+	padding: 0;
+	border: none;
+	font-size: 14px;
+	color: #555;
+	line-height: 20px;
+	vertical-align: top;
+	box-sizing: border-box;
+	overflow-y: hidden;
+	resize: none;
+	border-radius: 3px;
+	margin-right: 5px;
+	min-width: 460px;
+	min-height: 40px;
+}
+
+#questionBtn:hover {
+	background-size: 5.1em;
 }
