--- a/src/main/webapp/resources/sqlEditor/css/rightClickSequence.css
+++ b/src/main/webapp/resources/sqlEditor/css/rightClickSequence.css
@@ -71,3 +71,14 @@
     left: 10%;
     top: -4%;
 }
+
+#selectIndexModal>div{
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    display: block;
+    position: absolute;
+    left: 23%;
+    top: -15%;
+}
