--- a/src/main/webapp/resources/chatBot/css/chatBotStyle.css
+++ b/src/main/webapp/resources/chatBot/css/chatBotStyle.css
@@ -6,17 +6,18 @@ body {
 }
 
 .chatBotRoom {
-	background-color: gray;
+	background-color: black;
 	width: 600px;
 	height: 650px;
 }
 /* 중앙 최상단 챗봇 텍스트 */
 .chatBotHeader {
-	background-color: #fff;
-	width: 100%;
-	height: 50px;
-    border-bottom: 1px solid #EAEAEA;
-	text-align: center;
+    background-color: black;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    color: white;
+    line-height: 2.5;
 }
 
 .chatBotArticle {
@@ -71,13 +72,15 @@ p.pchatBot {
 
 .chatBotResult {
 	border-radius: 6px;
-	background-color: #fff;
+	background-color: black;
 	box-shadow: 2px 3px 12px 3px rgba(0, 0, 0, 0.1);
-	line-height: 22px;
-	letter-spacing: -0.5px;
-	color: #555;
+	padding: 0 5px;
+	line-height: 25px;
+	letter-spacing: -1.5px;
+	color: white;
 	left: 0;
 	float: left;
+	
 }
 
 .profImg {
@@ -99,16 +102,16 @@ p.pchatBot {
 
 .userResult {
 	border-radius: 6px;
-	background-color: #fff;
+	background-color: black;
 	box-shadow: -3px 5px 6px 1px rgba(0, 0, 0, 0.1);
-	line-height: 22px;
-	letter-spacing: -0.5px;
-	color: #555;
+	line-height: 25px;
+	color: white;
 	left: 0;
 	float: right;
 	margin-top: 2%;
 	margin-left: 20%;
 	margin-right: 2%;
+	padding: 0 5px;
 }
 
 .chatBotFooter {
@@ -124,6 +127,7 @@ p.pchatBot {
 	margin-right: 10px;
 }
 
+/* 채팅 전송 버튼 */
 .questionBtn {
 	position: relative;
 	float: right;
@@ -155,6 +159,18 @@ p.pchatBot {
 	min-height: 40px;
 }
 
-#questionBtn:hover {
-	background-size: 5.1em;
+/* 챗봇 버튼 */
+.chatBotBtn{
+    border-radius: 10px;
+    background: white;
+    color: black;
+    margin: 7px;
+    padding: 10px 10px;
+    text-align: center;
+    border: none;
+    transition: all 0.2s;
 }
+
+/* 버튼 호버 이벤트 */
+.chatBotBtn:hover{background : #EAEAEA;}
+.chatBotBtn:hover:after{content: "";}
