--- a/src/main/webapp/resources/history/css/historyDetail.css
+++ b/src/main/webapp/resources/history/css/historyDetail.css
@@ -1,10 +1,9 @@
 @charset "UTF-8";
 
 h4{
-    border: solid 1px #DEDEDE;
-    background: #b1b1b1;
-    color: #222222;
+    color: black;
     padding: 4px;
+    line-height: 2;
 }
 .clickEvent:hover {
 	cursor: pointer;
@@ -117,6 +116,7 @@ h4{
 }
 #queryLegend{
 	text-align: center;
+    border-bottom: 2px solid black;
 }
 // 창닫기
 #span{line-height: 0.5;text-align: right;opacity: 1;margin-right: 1%; margin-top: 1%;
