--- a/src/main/webapp/resources/sqlEditor/css/rightClickTable.css
+++ b/src/main/webapp/resources/sqlEditor/css/rightClickTable.css
@@ -49,3 +49,10 @@
 .tableMenu li:hover span {
   color: #FFFFFF;
 }
+
+/* 수정버튼 */
+#updateTableBtn{
+    float: right;
+    margin-top: -29px;
+    left: 2px;	
+}
