챗봇 질의응답 추가 / 인덱스 유효성 검사 추가

--- a/src/main/webapp/resources/chatBot/css/chatBotStyle.css
+++ b/src/main/webapp/resources/chatBot/css/chatBotStyle.css
@@ -196,14 +196,7 @@ p.pchatBot {
 	height: 124px;
 }
 
-#sqlEditor{
-    width: 35px;
-    height: 35px;
-    border: 7px solid red;
-    position: absolute;
-    left: 39px;
-    top: 373px;
-}
+#sqlEditor{	width: 280px; height: 138px;}
 
 #ownerCreate{width: 100%; height: 100%;}
 
