닫기 버튼 위치 오른쪽으로 수정

--- a/src/main/webapp/resources/crew/css/crewMain.css
+++ b/src/main/webapp/resources/crew/css/crewMain.css
@@ -26,9 +26,15 @@
 /* The Close Button */
 .close {
     color: #aaa;
-    float: right;
     font-size: 28px;
     font-weight: bold;
+    position: absolute;
+    right: 2%;
+    top: 6%;
+    width: 30px;
+    text-align: center;
+    height: 25px;
+    line-height: 29px;
 }
 
 .close:hover, .close:focus {
